<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserCredentialsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/user_credentials_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_standard_margin"
            android:layout_marginTop="@dimen/layout_standard_margin"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/user_credentials_txt_hint_username"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>
            
        </LinearLayout>
        <include layout="@layout/divider_layout"/>

        <LinearLayout
            android:id="@+id/user_credentials_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_standard_margin"
            android:layout_marginTop="@dimen/layout_standard_margin"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/user_credentials_txt_hint_password"
                android:inputType="textPassword" />
       
        </LinearLayout>
		<include layout="@layout/divider_layout"/>

		<LinearLayout
		    android:id="@+id/user_credentials_layout_button_save"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="@dimen/layout_standard_margin"
		    android:layout_marginTop="@dimen/layout_standard_margin"
		    android:orientation="vertical" >

			<Button
			    android:id="@+id/buttonSave"
			    style="@style/ButtonSave"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:onClick="saveButtonTapped"
			    android:text="@string/user_credentials_button_save" />
       
        </LinearLayout>
      	<include layout="@layout/divider_layout"/>
    </LinearLayout>

</ScrollView>
