<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/report_field_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/layout_standard_margin"
            android:layout_marginTop="@dimen/layout_standard_margin"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewFieldName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/report_row_vertical_margin"
                android:layout_marginLeft="@dimen/report_row_horizontal_margin"
                android:layout_marginTop="@dimen/report_row_vertical_margin"
                android:text="@string/report_text_field_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextFieldName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/report_row_vertical_margin"
                android:layout_marginLeft="@dimen/report_row_horizontal_margin"
                android:layout_marginTop="@dimen/report_row_vertical_margin"
                android:ems="10"
                android:hint="@string/report_text_field_name_hint" >
            </EditText>
        </LinearLayout>

        <include layout="@layout/divider_layout" />

        <LinearLayout
            android:id="@+id/report_layout_severity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_standard_margin"
            android:layout_marginTop="@dimen/layout_standard_margin"
            android:orientation="vertical" >

            <include layout="@layout/report_type_severity_layout" />
        </LinearLayout>

        <include layout="@layout/divider_layout" />

        <LinearLayout
            android:id="@+id/report_layout_bbch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_standard_margin"
            android:layout_marginTop="@dimen/layout_standard_margin"
            android:orientation="vertical" >

            <include layout="@layout/report_type_bbch_layout" />
        </LinearLayout>

        <include layout="@layout/divider_layout" />

        <LinearLayout
            android:id="@+id/report_layout_type_production"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_standard_margin"
            android:layout_marginTop="@dimen/layout_standard_margin"
            android:orientation="vertical" >

            <include layout="@layout/report_type_production_layout" />
        </LinearLayout>

        <include layout="@layout/divider_layout" />

        <LinearLayout
            android:id="@+id/report_variety"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/layout_standard_margin"
            android:layout_marginTop="@dimen/layout_standard_margin"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewFieldVariety"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/report_row_vertical_margin"
                android:layout_marginLeft="@dimen/report_row_horizontal_margin"
                android:layout_marginTop="@dimen/report_row_vertical_margin"
                android:text="@string/report_text_variety"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextVariety"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/report_row_vertical_margin"
                android:layout_marginLeft="@dimen/report_row_horizontal_margin"
                android:layout_marginTop="@dimen/report_row_vertical_margin"
                android:ems="10"
                android:hint="@string/report_text_variety_hint" >
            </EditText>
        </LinearLayout>

        <include layout="@layout/divider_layout" />

        <LinearLayout
            android:id="@+id/report_layout_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_standard_margin"
            android:layout_marginTop="@dimen/layout_standard_margin"
            android:orientation="vertical" >

            <include layout="@layout/report_image_layout" />
        </LinearLayout>

        <include layout="@layout/divider_layout" />

        <LinearLayout
            android:id="@+id/report_layout_coordinate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_standard_margin"
            android:layout_marginTop="@dimen/layout_standard_margin"
            android:orientation="vertical" >

            <include layout="@layout/report_coordinate_layout" />
        </LinearLayout>

        <include layout="@layout/divider_layout" />

        <LinearLayout
            android:id="@+id/report_layout_button_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_standard_margin"
            android:layout_marginTop="@dimen/layout_standard_margin"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonSend"
                style="@style/ButtonSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="sendButtonTapped"
                android:text="@string/report_button_send" />
        </LinearLayout>

        <include layout="@layout/divider_layout" />
    </LinearLayout>

</ScrollView>
